--- a/src/css/main.css
+++ b/src/css/main.css
@@ -297,3 +297,22 @@ button:hover {
     width: 100%;
     height: 100%;
 }
+
+
+
+/*  Spoiler  */
+.post-body {
+    max-width: 680px;
+    margin: 20px auto;
+    border: 10px solid #f0f0f0;
+    padding: 15px 20px;
+    background-color: #fff;
+    color: #444;
+}
+/* CSS SPOILER - ACREZYBLOG */
+.centerflip{text-align:center}
+.flippy{text-align:center}
+button.flippy{background:#272727;color:#fff;text-align:center;margin:0 auto;border:none;border-radius:3px;padding:8px 16px;margin:10px auto;font-size:14px;font-weight:bold;box-shadow:0 3px 0 0 #585858;vertical-align:middle;cursor:pointer;text-shadow:0 1px rgba(0,0,0,0.3);transition:background 0.1s ease-in-out}
+.flippy button:hover,.flippy button:focus{background:#9e4fbf;outline:none}
+.flippanel{padding:1px;text-align:left;background:#2c2c2c;border:0}
+.flippanel{padding:24px;display:none}
