--- a/_layouts/defaultV2.html
+++ b/_layouts/defaultV2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "ru" }}">
+<html lang="{{ page.lang | default: "ru" }}">
 
 <head>
     <meta charset="UTF-8">
@@ -72,7 +72,7 @@
     <footer class="site-footer">
         <div class="footer-content">
             <!-- {# --- Стандартное Содержимое Футера --- #} -->
-            <p>© 2023-{{ site.time | date: '%Y' }} {{ site.author | default: "Твое Имя/Ник" }}.</p>
+            <p>© 2023-{{ site.time | date: '%Y' }} {{ page.author | default: "Твое Имя/Ник" }}.</p>
             <p><a href="https://github.com/YOUR_GITHUB_USERNAME/YOUR_REPOSITORY_NAME" target="_blank" rel="noopener noreferrer">Исходный код на GitHub</a></p>
 
             <!-- {# --- Дополнительное Содержимое Футера из Front Matter --- #}
