--- a/_layouts/defaultV2.html
+++ b/_layouts/defaultV2.html
@@ -93,7 +93,7 @@
     {# Позволяет странице указать свои специфичные скрипты #} -->
     {% if page.extra_js %}
         {% for js_file in page.extra_js %}
-            <script src="{{ js_file | relative_url }}" {% if page.js_async %}async defer{% endif %}></script> 
+            <!-- <script src="{{ js_file | relative_url }}" {% if page.js_async %}async defer{% endif %}></script>  -->
             <!-- {# Опционально: async/defer #} -->
         {% endfor %}
     {% endif %}
