--- a/_layouts/defaultV2.html
+++ b/_layouts/defaultV2.html
@@ -93,14 +93,14 @@
     {# Позволяет странице указать свои специфичные скрипты #} -->
     {% if page.extra_js %}
         {% for js_file in page.extra_js %}
-            <!-- <script src="{{ js_file | relative_url }}" {% if page.js_async %}async defer{% endif %}></script>  -->
+            <script src="{{ js_file | relative_url }}" {% if page.js_async %}async defer{% endif %}></script> 
             <!-- {# Опционально: async/defer #} -->
         {% endfor %}
     {% endif %}
 
     <!-- {# --- Скрипт для Рекламного Блока (если показывается) --- #} -->
     {% if page.show_ads != false %}
-        <script src="{{ '/assets/js/ads.js' | relative_url }}" async defer></script>
+        <script src="{{ '/assets/js/ads.js' | relative_url }}"></script>
     {% endif %}
 
 </body>
