add layout styles to the defaultV2 layout

--- a/_layouts/defaultV2.html
+++ b/_layouts/defaultV2.html
@@ -11,7 +11,7 @@
     <!-- {# Сюда можно добавить больше мета-тегов: OpenGraph, Twitter Cards (или использовать плагин jekyll-seo-tag) #} -->
 
     <!-- {# --- Основные Стили --- #} -->
-    <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
+    <link rel="stylesheet" href="{{ '/assets/css/layout-styles.css' | relative_url }}">
 
     <!-- {# --- Шрифты (если подключаются глобально) --- #} -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
