--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,8 @@
         {% endfor %}
     {% endif %}
 
-    <!-- {% feed_meta %} --> <!-- Для RSS, если нужно -->
+    <!-- {% feed_meta %} -->
+    <!-- Для RSS, если нужно -->
 
 </head>
 
