--- a/_layouts/tasks.html
+++ b/_layouts/tasks.html
@@ -15,7 +15,7 @@ title: "Трекер задач"  <!-- Заголовок страницы -->
     <link rel="stylesheet" href="{{ '/assets/css/layout-styles.css' | relative_url }}">
     <link rel="stylesheet" href="{{ '/assets/css/content-styles.css' | relative_url }}">
     <!-- Дополнительные стили специально для трекера -->
-    <link rel="stylesheet" href="{{ '/assets/css/task-tracker.css' | relative_url }}"> <!-- !!! НУЖНО СОЗДАТЬ ЭТОТ ФАЙЛ !!! -->
+    <link rel="stylesheet" href="{{ '/assets/css/task-tracker.css' | relative_url }}">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
